--- a/index.html
+++ b/index.html
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>SIKU Sphere 3D</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    #infoBox {
-      position: absolute;
-      bottom: 20px;
-      left: 20px;
-      background: white;
-      padding: 10px;
-      border-radius: 8px;
-      display: none;
-      font-family: sans-serif;
-      max-width: 300px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-    #infoTitle { font-weight: bold; color: #0066cc; }
-    #infoText { margin-top: 5px; color: black; }
-  </style>
-</head>
-<body>
-  <div id="infoBox">
-    <div id="infoTitle"></div>
-    <div id="infoText"></div>
-  </div>
-  <script type="module" src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>SIKU Sphere 3D Test</title>
+    <style>
+      body { margin: 0; overflow: hidden; }
+      canvas { display: block; }
+    </style>
+  </head>
+  <body>
+    <script type="module" src="app.js"></script>
+  </body>
 </html>
