--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>SIKU Sphere 3D Lokal</title>
+  <meta charset="UTF-8" />
+  <title>SIKU Sphere 3D</title>
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
   </style>
 </head>
 <body>
+  <!-- Die App-Logik und 3D-Modell wird hier über app.js geladen -->
   <script type="module" src="./app.js"></script>
 </body>
 </html>
+
