--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,6 @@
   </style>
 </head>
 <body>
-  <!-- Die App-Logik und 3D-Modell wird hier über app.js geladen -->
-  <script type="module" src="./app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
-
