--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </style>
 </head>
 <body>
-  <script type="module" src="app.js"></script>
+  <script type="module" src="./app.js"></script>
 </body>
 </html>
